add get/put username, refactor long account query
